# DNS-design

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  design.md  hosts.txt  socket.md
include/: demo.h  dns_cache.h  dns_config.h  dns_convert.h  dns_mes_print.h  dns_resetid.h  dns_server.h  dns_struct.h  dns_table.h  output_level.h  uthash.h
src/: demo.c  dns_cache.c  dns_config.c  dns_convert.c  dns_mes_print.c  dns_resetid.c  dns_server.c  dns_table.c  main.c  output_level.c  test-client.c  test-server.c
